--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
    
    <textarea name="message" placeholder="Your Message" class="contact-inputs" required></textarea>
    
-   <button type="submit">Submit <img src="assets/arrow.png" alt=""></button>
+   <button type="submit">Submit <img src="/arrow.png" alt=""></button>
    
   </form>
   <div class="contact-right">
-      <img src="/assets/contact.png" alt="">
+      <img src="/contact.png" alt="">
       </div>
       </div>
 </body>
